--- a/styles/scss/_section-3.scss
+++ b/styles/scss/_section-3.scss
@@ -16,7 +16,7 @@
   }
 }
 
-@media screen and (min-width: 430px) {
+@media screen and (min-width: $breakpoint-1) {
   .section-3-h2 {
     width: 80%;
   }
