--- a/styles/scss/_variables.scss
+++ b/styles/scss/_variables.scss
@@ -25,4 +25,6 @@ $weight-bold: 700;
 $weight-medium: 500;
 $weight-standard: 400;
 // breakpoints
-$breakpoint-mobile: 600px;
+$breakpoint-1: 430px;
+$breakpoint-2: 490px;
+$breakpoint-3: 600px;
