--- a/styles/scss/index.scss
+++ b/styles/scss/index.scss
@@ -34,6 +34,4 @@ body {
   font-weight: $weight-standard;
   color: $black;
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
-  // delete ↓
-  color: yellow;
 }
